# mrd69

./: .dockerignore  .env  .env.example  .env.sv  .flake8  .gitignore  .pre-commit-config.yaml  CO_DALEJ.md  Caddyfile  DEPLOY_RUNPOD_KROKI.sh  DOCKER_DLA_ZIELONYCH.md  DOCKER_WYJASNIONY.md  Dockerfile  Dockerfile.runpod  GITHUB_SETUP.md  Makefile  QUICK_START.md  README.md  RUNPOD_DEPLOY.md  RUNPOD_DEPLOYMENT_GUIDE.md  SCIAGA_TESTY.md  START.md  STATUS.md  TEST.md  TESTY_WYJASNIONE.md  api_bridge.py  app_entrypoints.txt  architektura_niezawodnosci.ipynb  autonauka.py  check_db.py  config.py  crypto_advisor_full.py  demo_personalization.py  deploy.sh  deploy_production.sh  deploy_to_runpod.sh  direct_server.py  docker-compose.yml  env_patch.sh  file_client.py  (+56 more)
data/: .gitkeep  chat_history.db  export.json  memory.db
docs/: PROJECT_STRUCTURE.md  USAGE.md
frontend/: app.js  index.html  style.css
github_ready/: Dockerfile  INSTALACJA_FULL.md  Makefile  PUSH_TO_GITHUB.sh  README_DEPLOY.md  app.py  autonauka_dziala.py  autonauka_full.py  autonauka_pro.py  endpoints_dodaj_do_monolit.py  frontend.html  frontend_full.html  monolit.py  run.sh  server.py
history/: 20250922_202439_941320.jsonl  20250922_230649_f20f5f.jsonl
reports/: all_endpoints_and_hits.txt  files_list.txt  routes_preview.txt  routes_summary.txt
routers/: crypto.py  travel.py  writing.py
scripts/: run_all.sh  test_dialog.sh  test_env.sh
src/: autonauka.py  crypto_advisor_full.py  env_guard.py  file_client.py  fix_writing_all_pro.py  io_pipeline.py  llm_client.py  memory.py  print_routes.py  (+6 more)
(+24 files in other folders)
