[project]
name = "mrd69"
version = "3.0.0"
description = "MORDZIX CORE - Zaawansowany System Pamięci"
authors = [{ name = "ahui69" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "pydantic==2.7.1",
    "uvicorn[standard]==0.29.0",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "structlog==24.1.0",
    "prometheus-fastapi-instrumentator==6.1.0",
    "langchain==0.1.16",
    "langchain-openai==0.1.3",
    "openai==1.23.6",
    "sentence-transformers==2.7.0",
    "scikit-learn==1.4.2",
    "networkx==3.3",
    "loguru", # Lepsze logi
    "tenacity==8.2.3", # Do inteligentnego ponawiania prób
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "isort",
    "mypy",
    "pre-commit",
]

[tool.ruff]
line-length = 100
select = ["B", "E", "F", "I", "N", "PL", "Q", "ERA"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["mrd69"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
